[package]
name = "sae_net"
version = "0.1.0"
authors = ["qiuweixuan <924313181@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.5.0", features = ["full"]} 
bytes = "0.6"
futures = "0.3.8"
async-trait = "0.1.42"